<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor">


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBackgroundColor"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_image_description" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/original_title_label"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/label_title" />


                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:textColor="@color/fontColor"
                    tools:text="@string/mock_title" />

                <TextView
                    android:id="@+id/release_date_label"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_release_date" />


                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:textColor="@color/fontColor"
                    tools:text="@string/mock_release_date" />


                <TextView
                    android:id="@+id/rating_label"
                    style="@style/labelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rating" />


                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/fontColor"
                    android:textSize="16sp"
                    tools:text="@string/mock_rating" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:stepSize="0.1" />

                <ImageView
                    android:id="@+id/favourite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_favorite_border_white_36dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plot_label"
                style="@style/labelExtensionStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_plot" />

            <TextView
                android:id="@+id/show_reviews_tv"
                style="@style/labelExtensionStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_reviews" />

            <TextView
                android:id="@+id/show_trailers_tv"
                style="@style/labelExtensionStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/watch_trailers" />

        </LinearLayout>


        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/plot_expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:ael_duration="400"
            app:ael_expanded="true">


            <TextView
                android:id="@+id/movie_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/fontColor"
                tools:text="@string/mock_plot" />
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>


        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/reviews_expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:ael_duration="400"
            app:ael_expanded="false">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/colorPrimary" />

        </com.github.aakira.expandablelayout.ExpandableLinearLayout>


        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/trailers_expandable_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:ael_duration="400"
            app:ael_expanded="false">

            <LinearLayout
                android:id="@+id/trailers_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/left_arrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/ic_keyboard_arrow_left_white_36dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@color/mainBackgroundColor"
                    android:scrollbars="horizontal" />

                <ImageView
                    android:id="@+id/right_arrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/ic_keyboard_arrow_right_white_36dp" />

            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableLinearLayout>


    </LinearLayout>

</ScrollView>